feat(agent): add typed runtime and report boundaries